--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>勇気の結晶</title>
+
   <style>
+    /* =========================================
+       ここから CSS（中央ズレ修正版を含む）
+       ========================================= */
     * {
       margin: 0;
       padding: 0;
@@ -42,10 +46,6 @@
       cursor: pointer;
     }
 
-    .header-title:hover {
-      opacity: 0.8;
-    }
-
     .header-title-input {
       font-size: 18px;
       font-weight: bold;
@@ -79,10 +79,6 @@
       margin-bottom: 4px;
     }
 
-    .hamburger-line:last-child {
-      margin-bottom: 0;
-    }
-
     .menu-overlay {
       position: fixed;
       inset: 0;
@@ -114,25 +110,6 @@
       margin-bottom: 16px;
     }
 
-    .menu-title {
-      font-size: 18px;
-      font-weight: bold;
-    }
-
-    .close-btn {
-      padding: 4px 8px;
-      cursor: pointer;
-      border: none;
-      background: transparent;
-      color: white;
-      border-radius: 4px;
-      font-size: 18px;
-    }
-
-    .close-btn:hover {
-      background-color: #374151;
-    }
-
     .universe-grid {
       display: grid;
       grid-template-columns: repeat(2, 1fr);
@@ -148,10 +125,6 @@
       transition: all 0.2s;
     }
 
-    .universe-thumbnail:hover {
-      border-color: #9ca3af;
-    }
-
     .universe-thumbnail.active {
       border-color: #22d3ee;
       box-shadow: 0 0 20px rgba(34, 211, 238, 0.3);
@@ -163,36 +136,11 @@
       height: auto;
     }
 
-    .universe-name {
-      background-color: #1f2937;
-      padding: 4px 8px;
-      font-size: 12px;
-      text-align: center;
-      color: #d1d5db;
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
-    }
-
-    .create-universe-btn {
-      width: 100%;
-      padding: 8px;
-      background: linear-gradient(to right, #06b6d4, #a855f7);
-      border: none;
-      border-radius: 8px;
-      font-weight: bold;
-      color: white;
-      cursor: pointer;
-      transition: opacity 0.2s;
-    }
-
-    .create-universe-btn:hover {
-      opacity: 0.9;
-    }
-
     .crystal-display {
-      height: 256px;
       position: relative;
+      width: 100%;
+      height: 256px;
+      overflow: hidden;
     }
 
     @media (max-width: 640px) {
@@ -201,9 +149,14 @@
       }
     }
 
+    /* ↓↓↓ 中央ズレ完全対策済み ↓↓↓ */
     .crystal-canvas {
-      width: 100%;
-      height: 100%;
+      position: absolute;
+      inset: 0;
+      width: 100% !important;
+      height: 100% !important;
+      display: block;
+      pointer-events: none;
     }
 
     .crystal-stats {
@@ -249,15 +202,6 @@
       outline: none;
     }
 
-    .task-input:focus, .subtask-textarea:focus {
-      ring: 2px;
-      ring-color: #22d3ee;
-    }
-
-    .subtask-textarea {
-      resize: none;
-    }
-
     .add-task-btn {
       width: 100%;
       padding: 8px;
@@ -269,10 +213,6 @@
       color: white;
       cursor: pointer;
       transition: opacity 0.2s;
-    }
-
-    .add-task-btn:hover {
-      opacity: 0.9;
     }
 
     .task-list {
@@ -287,11 +227,6 @@
       padding: 32px 0;
     }
 
-    .empty-state-subtitle {
-      font-size: 12px;
-      margin-top: 4px;
-    }
-
     .task-card {
       padding: 12px;
       border-radius: 8px;
@@ -304,68 +239,6 @@
     .task-card.completed {
       background-color: rgba(6, 78, 59, 0.3);
       border-color: rgba(34, 197, 94, 0.5);
-    }
-
-    .task-header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      margin-bottom: 8px;
-    }
-
-    .task-name {
-      font-weight: 500;
-    }
-
-    .task-name.completed {
-      color: #4ade80;
-    }
-
-    .delete-btn {
-      color: #f87171;
-      background: none;
-      border: none;
-      font-size: 14px;
-      padding: 0 8px;
-      cursor: pointer;
-    }
-
-    .delete-btn:hover {
-      color: #fca5a5;
-    }
-
-    .subtask-list {
-      display: flex;
-      flex-direction: column;
-      gap: 4px;
-    }
-
-    .subtask-item {
-      display: flex;
-      align-items: center;
-      gap: 8px;
-      padding: 4px;
-      cursor: pointer;
-      border-radius: 4px;
-    }
-
-    .subtask-item:hover {
-      background-color: rgba(55, 65, 81, 0.5);
-    }
-
-    .subtask-checkbox {
-      width: 16px;
-      height: 16px;
-      accent-color: #22d3ee;
-    }
-
-    .subtask-text {
-      font-size: 14px;
-    }
-
-    .subtask-text.done {
-      text-decoration: line-through;
-      color: #6b7280;
     }
 
     .completion-overlay {
@@ -383,39 +256,15 @@
       display: flex;
     }
 
-    .completion-message {
-      text-align: center;
-      animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
-    }
-
-    .completion-icon {
-      font-size: 48px;
-      margin-bottom: 8px;
-    }
-
-    .completion-text {
-      font-size: 24px;
-      font-weight: bold;
-      color: #fbbf24;
-    }
-
-    .completion-hint {
-      font-size: 14px;
-      color: #d1d5db;
-      margin-top: 4px;
-    }
-
     @keyframes pulse {
-      0%, 100% {
-        opacity: 1;
-      }
-      50% {
-        opacity: .5;
-      }
+      0%, 100% { opacity: 1; }
+      50% { opacity: .5; }
     }
   </style>
 </head>
+
 <body>
+
   <header>
     <h1 class="header-title" id="universeTitle">宇宙 1</h1>
     <button class="hamburger" id="menuBtn">
@@ -428,7 +277,7 @@
   <div class="menu-overlay" id="menuOverlay">
     <div class="menu-panel" onclick="event.stopPropagation()">
       <div class="menu-header">
-        <h2 class="menu-title">実績 - 宇宙一覧</h2>
+        <h2>実績 - 宇宙一覧</h2>
         <button class="close-btn" id="closeBtn">✕</button>
       </div>
       <div class="universe-grid" id="universeGrid"></div>
@@ -460,9 +309,9 @@
 
   <div class="completion-overlay" id="completionOverlay">
     <div class="completion-message">
-      <div class="completion-icon">🎉</div>
-      <div class="completion-text">結晶完成！</div>
-      <div class="completion-hint">タップして続ける</div>
+      <div style="font-size:48px;margin-bottom:8px;">🎉</div>
+      <div style="font-size:24px;font-weight:bold;color:#fbbf24;">結晶完成！</div>
+      <div style="font-size:14px;color:#d1d5db;margin-top:4px;">タップして続ける</div>
     </div>
   </div>
 
